--- a/css/section.css
+++ b/css/section.css
@@ -752,7 +752,7 @@
   position: absolute;
   box-shadow: inset 0px -6px 120px 10px rgba(0, 0, 0, 0.463);
   flex-shrink: 0;
-  background: url("/img/section_background.jpeg") lightgray 0px 0px / 100% 100%
+  background: url("../img/section_background.jpeg") lightgray 0px 0px / 100% 100%
     no-repeat;
   filter: brightness(110%);
   filter: saturate(1.4);
@@ -1352,6 +1352,7 @@
   margin-left: 5rem;
   margin-right: 5rem;
   width: 100%;
+  height: fit-content;
 }
 .swift_ui {
   box-sizing: border-box;
